--- a/R-package/DESCRIPTION
+++ b/R-package/DESCRIPTION
@@ -2,7 +2,7 @@ Package: target
 Type: Package
 Title: What the Package Does Using Title Case
 Version: 0.1
-Date: 2018-10-19
+Date: 2019-10-16
 Author: Klaus Holst
 Maintainer: Klaus Holst <klaus.holst@maersk.com>
 Description: More details about what the package does. See
@@ -11,9 +11,13 @@ Description: More details about what the package does. See
 Depends:
     R (>= 3.3),
     lava (>= 1.6.3)
+Suggests:
+    testthat (>= 0.11)    
 License: GPL (>= 2)
 Imports: Rcpp (>= 0.12.18), DEoptim
 LinkingTo: Rcpp, RcppArmadillo
+LazyLoad: yes
+NeedsCompilation: yes
 SystemRequirements: C++11
 ByteCompile: yes
 Encoding: UTF-8
