new python and R class bindings

--- a/R-package/DESCRIPTION
+++ b/R-package/DESCRIPTION
@@ -5,20 +5,19 @@ Version: 0.1
 Date: 2019-10-16
 Author: Klaus Holst
 Maintainer: Klaus Holst <klaus.holst@maersk.com>
-Description: More details about what the package does. See
-        <http://cran.r-project.org/doc/manuals/r-release/R-exts.html#The-DESCRIPTION-file>
-        for details on how to write this part.
+Description: More details about what the package does.
 Depends:
     R (>= 3.3),
     lava (>= 1.6.3)
 Suggests:
     testthat (>= 0.11)    
 License: GPL (>= 2)
-Imports: Rcpp (>= 0.12.18), DEoptim
+Imports: Rcpp (>= 1.0.0), DEoptim
 LinkingTo: Rcpp, RcppArmadillo
 LazyLoad: yes
 NeedsCompilation: yes
 SystemRequirements: C++11
 ByteCompile: yes
+RcppModules: riskregmodels
 Encoding: UTF-8
 RoxygenNote: 6.1.1
