--- a/python-package/MANIFEST.in
+++ b/python-package/MANIFEST.in
@@ -1,8 +1,9 @@
 include CMakeLists.txt
 include README.md
 include Pipfile
-include docs/index.rst
+#include docs/index.rst
 recursive-include src/ *
+recursive-include tests/ *.py *.cpp *.hpp *.h
 recursive-exclude src/armadillo *.pdf *.html *.png *.md *.lib *.dll
 prune src/armadillo/mex_interface
 prune src/armadillo/build
@@ -10,4 +11,7 @@ prune src/armadillo/tests
 #prune src/armadillo/misc src/armadillo/examples
 prune src/pybind11/docs
 prune src/pybind11/tests
-
+prune build
+prune dist
+#prune src/unittest-cpp/tests
+recursive-exclude * *.o *.so *.pyc *.egg *.egg-info .git* __pycache__
