--- a/python-package/Pipfile
+++ b/python-package/Pipfile
@@ -8,9 +8,12 @@ name = "test"
 url = "https://test.pypi.org/simple"
 verify_ssl = true
 
-
 [packages]
-numpy = ">=1.15.0"
+numpy =     ">=1.15.0"
+pandas =    ">=0.25.0"
+scipy =     ">=1.30.0"
+statsmodels ">=0.10.0"
+patsy =     ">=0.5.0"
 
 [dev-packages]
 flake8 = "*"
