--- a/python-package/CMakeLists.txt
+++ b/python-package/CMakeLists.txt
@@ -6,8 +6,6 @@ project(${target})
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
-# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
 
 find_program(CCACHE_FOUND ccache)
 if(CCACHE_FOUND)
@@ -28,14 +26,14 @@ else()
   MESSAGE ([Main]  " Using Armadillo included in this package")
   find_package(LAPACK REQUIRED)
   add_subdirectory(src/armadillo)
+  include_directories(src/armadillo/include)
 endif ()
 MESSAGE( [Main] " ARMADILLO_LIBRARIES = ${ARMADILLO_LIBRARIES}")
 MESSAGE( [Main] " ARMADILLO_INCLUDE_DIRS = ${ARMADILLO_INCLUDE_DIRS}")
 
 SET(LIBTARGET_DIR "${CMAKE_SOURCE_DIR}/src/target-cpp")
-#SET(LIBTARGET_SRC "${LIBTARGET}/glm.cpp" "${LIBTARGET}/target.cpp")
 FILE(GLOB LIBTARGET_SRC ${LIBTARGET_DIR}/*.cpp)
-FILE(GLOB LIBTARGET_HDR ${LIBTARGET_DIR}/*.h*)
+FILE(GLOB LIBTARGET_HDR ${LIBTARGET_DIR}/*.hpp)
 include_directories(${LIBTARGET_DIR} LIBTARGET)
 add_library(libtarget ${LIBTARGET_SRC} ${LIBTARGET_HDR})
 MESSAGE( [Main] " LIBTARGET_DIR = ${LIBTARGET_DIR}")
@@ -59,6 +57,7 @@ else()
   MESSAGE ([Main]  " Using UnitTest++ included in this package")
   set(UTPP_INCLUDE_TESTS_IN_BUILD OFF CACHE BOOL "unit test building disabled" FORCE)  
   add_subdirectory(src/unittest-cpp)
+  include_directories(src/unittest-cpp)
 endif()
 
 add_executable("${PROJECT_NAME}_test" ${TESTS})
@@ -89,7 +88,6 @@ else()
   #set_target_properties(${target} PROPERTIES LINK_FLAGS "-shared")
 endif()
 
-#target_link_libraries(${target} PRIVATE armadillo libtarget)
 target_link_libraries(${target} PRIVATE armadillo)
 
 
