--- a/python-package/Pipfile
+++ b/python-package/Pipfile
@@ -3,21 +3,9 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
-[[source]]
-name = "test"
-url = "https://test.pypi.org/simple"
-verify_ssl = true
-
-[packages]
-numpy =     ">=1.15.0"
-pandas =    ">=0.25.0"
-scipy =     ">=1.30.0"
-statsmodels ">=0.10.0"
-patsy =     ">=0.5.0"
-
 [dev-packages]
-flake8 = "*"
 pytest = "*"
+flake8 = "*"
 pytest-runner = "*"
 pytest-cov = "*"
 sphinx = "*"
@@ -25,6 +13,13 @@ sphinx-autobuild = "*"
 sphinx-autodoc-typehints = "*"
 mock = "*"
 autodoc = "*"
+
+[packages]
+patsy = ">=0.5.0"
+numpy = ">=1.15.0"
+pandas = ">=0.25.0"
+scipy = ">=1.3.0"
+statsmodels = ">=0.10.0"
 
 [requires]
 python_version = "3.7"
