--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ examples/*.csv
 doc/html
 build
 tmp
+__pycache__
 
 # Created by https://www.gitignore.io/api/c++
 # Edit at https://www.gitignore.io/?templates=c++
