--- a/R-package/NAMESPACE
+++ b/R-package/NAMESPACE
@@ -17,14 +17,16 @@ export(riskreg)
 export(riskreg_mle)
 export(riskreg_semi)
 import(Rcpp)
-importFrom(DEoptim,DEoptim)
-importFrom(DEoptim,DEoptim.control)
+importFrom(futile.logger,flog.debug)
+importFrom(futile.logger,flog.info)
+importFrom(futile.logger,flog.warn)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(lava,Inverse)
 importFrom(lava,estimate)
 importFrom(lava,getoutcome)
 importFrom(lava,iid)
+importFrom(optimx,optimx)
 importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,coef)
