updated phony targets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,9 @@ endif()
 find_package(spdlog QUIET)
 if (spdlog_FOUND AND NOT USE_PKG_LIB)	
   message ([Main]  " spdlog FOUND")
-else()
+ else()
+  set(SPDLOG_BUILD_TESTS OFF)
+  set(SPDLOG_BUILD_TESTS_HO OFF)   
   message ([Main]  " Using spdlog included in this package")
   add_subdirectory("lib/spdlog")
   include_directories("lib/spdlog/include")
@@ -99,7 +101,7 @@ set(TESTS
   )
 
 add_executable("${PROJECT_NAME}_test" ${TESTS})
-target_link_libraries("${PROJECT_NAME}_test" PRIVATE armadillo Catch2::Catch2 target)
+target_link_libraries("${PROJECT_NAME}_test" PRIVATE armadillo Catch2::Catch2 target spdlog::spdlog)
 
 find_program( MEMORYCHECK_COMMAND valgrind )
 set( MEMORYCHECK_COMMAND_OPTIONS "--trace-children=yes --leak-check=full" )
