--- a/python-package/setup.cfg
+++ b/python-package/setup.cfg
@@ -4,7 +4,7 @@ test=pytest
 [flake8]
 max-line-length=120
 count = False
-ignore = E226,E302,E41,W504
+ignore = E226,E302,E41,W504,E221
 statistics = True
 
 # [tool:pytest]
