--- a/python-package/CMakeLists.txt
+++ b/python-package/CMakeLists.txt
@@ -13,6 +13,8 @@ set(RUN_TESTS TRUE)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 #set(CMAKE_BUILD_WITH_INSTALL_RPATH ON)
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+
 
 ################################################################################
 # Libraries
@@ -37,6 +39,7 @@ if (ARMADILLO_FOUND)
 else()
   message ([Main]  " Using Armadillo included in this package")
   find_package(LAPACK REQUIRED)
+  set(DETECT_HDF5 false)
   add_subdirectory(src/armadillo)
   include_directories(src/armadillo/include)
 endif ()
@@ -92,11 +95,11 @@ pybind11_add_module(__${target}__
 target_link_libraries(__${target}__ PRIVATE armadillo)
  
 if(APPLE)
-  set_target_properties(__${target}__ PROPERTIES INSTALL_NAME_DIR "@rpath")
-  set_target_properties(__${target}__ PROPERTIES INSTALL_RPATH "@loader_path")
+#  set_target_properties(__${target}__ PROPERTIES INSTALL_NAME_DIR "@rpath")
+#  set_target_properties(__${target}__ PROPERTIES INSTALL_RPATH "@loader_path")
 else()
-  set_target_properties(__${target}__ PROPERTIES INSTALL_RPATH "$ORIGIN")
-  #set_target_properties(${target} PROPERTIES LINK_FLAGS "-shared")
+# set_target_properties(__${target}__ PROPERTIES INSTALL_RPATH "$ORIGIN")
+# set_target_properties(${target} PROPERTIES LINK_FLAGS "-shared")
 endif()
 
 
