--- a/python-package/CMakeLists.txt
+++ b/python-package/CMakeLists.txt
@@ -39,7 +39,7 @@ if (ARMADILLO_FOUND)
 else()
   message ([Main]  " Using Armadillo included in this package")
   find_package(LAPACK REQUIRED)
-  set(DETECT_HDF5 false)
+  set(DETECT_HDF5 FALSE)
   add_subdirectory(src/armadillo)
   include_directories(src/armadillo/include)
 endif ()
