--- a/python-package/CMakeLists.txt
+++ b/python-package/CMakeLists.txt
@@ -38,7 +38,7 @@ if (ARMADILLO_FOUND)
 else()
   message ([Main]  " Using Armadillo included in this package")
   find_package(LAPACK REQUIRED)
-  set(DETECT_HDF5 OFF CACHE)
+  set(DETECT_HDF5 OFF CACHE BOOL "Disable Armadillo HDF5 support")
   add_subdirectory(src/armadillo)
   include_directories(src/armadillo/include)
 endif ()
