tests and rename of c++/rcpp modules

--- a/R-package/targeted/DESCRIPTION
+++ b/R-package/targeted/DESCRIPTION
@@ -18,6 +18,6 @@ LazyLoad: yes
 NeedsCompilation: yes
 SystemRequirements: C++11
 ByteCompile: yes
-RcppModules: riskregmodels, mlogit
+RcppModules: riskregmodel, dcmodel
 Encoding: UTF-8
 RoxygenNote: 7.1.0
