--- a/python-package/Makefile
+++ b/python-package/Makefile
@@ -70,7 +70,7 @@ markdown:
 
 .PHONY: doc
 doc:
-	cd doc; $(MAKE)
+	cd doc; $(MAKE) html
 
 ################################################################################
 
