--- a/.travis.yml
+++ b/.travis.yml
@@ -1,42 +1,82 @@
-language: r
-r:
- - release
- - devel
-sudo: false
-warnings_are_errors: true
-cache: packages
+matrix:
+  include:
+    language: python
 
-#r_build_args: --no-manual --no-resave-data
-#r_check_args: --as-cran --run-donttest --no-build-vignettes --no-manual
-#
-#before_install:
-# - tlmgr install fancyvrb units nag capt-of zlmtt environ
+    jobs:
+      include:
+        # perform a linux build
+        - services: docker
+        # and a mac build
+        - os: osx
+          language: shell
+        # and a windows build
+        - os: windows
+          language: shell
+          before_install:
+            - choco install python --version 3.8.0
+            - export PATH="/c/Python38:/c/Python38/Scripts:$PATH"
+        before_install:
+          - cd python-package
 
-addons:
-   apt:
-     packages:
-       - r-cran-devtools
-       - r-cran-mets
-       - r-cran-testthat
-       - r-cran-futile.logger
-       - r-cran-covr
+    env:
+      global:
+        - TWINE_USERNAME=__token__
+        # Note: TWINE_PASSWORD is set to a PyPI API token in Travis settings
 
-# r_binary_packages:
-#  - numDeriv
-#  - lava
-#  - testthat
-#  - futile.logger
-#  - mets
-#  - covr
-#r_github_packages:
-# - jimhester/covr
-# - mangothecat/visualTest
+    install:
+      - python3 -m pip install cibuildwheel==1.3.0
 
-install:
-  - echo
+    script:
+      # build the wheels, put them into './wheelhouse'
+      - python3 -m cibuildwheel --output-dir wheelhouse
+
+    after_success:
+    # if the release was tagged, upload them to PyPI
+    - |
+      if [[ $TRAVIS_TAG ]]; then
+      python3 -m pip install twine
+      python3 -m twine upload wheelhouse/*.whl
+      fi
+
+      
+  include:
+    language: r    
+    r:
+      - release
+    sudo: false
+    warnings_are_errors: true
+    cache: packages
     
-script:
-  - make checkr
+    addons:
+      apt:
+        packages:
+          - r-cran-covr
+          - r-cran-devtools
+          - r-cran-futile.logger
+          - r-cran-lava
+          - r-cran-optimx          
+          - r-cran-rcpp
+          - r-cran-rcpparmadillo
+          - r-cran-testthat
+          
+    install:
+      - echo    
+    script:
+      - make checkr pkg=targeted
 
-after_success:
-  - Rscript -e 'library("covr"); codecov(type="test")'
+      
+  include:
+    language: cpp
+    sudo: required    
+    os:
+      - linux
+    compiler:
+      - clang
+      - gcc
+    addons:
+      apt:
+        packages:
+          - cmake
+          - ninja
+    script:
+      - make init test
