--- a/.travis.yml
+++ b/.travis.yml
@@ -1,82 +1,78 @@
 matrix:
   include:
-    language: python
-
-    jobs:
-      include:
-        # perform a linux build
-        - services: docker
-        # and a mac build
-        - os: osx
-          language: shell
-        # and a windows build
-        - os: windows
-          language: shell
+    - language: python
+      jobs:        
+        include:
+          # perform a linux build
+          - services: docker
+          # and a mac build
+          - os: osx
+            language: shell
+          # and a windows build
+          - os: windows
+            language: shell
+            before_install:
+              - choco install python --version 3.8.0
+              - export PATH="/c/Python38:/c/Python38/Scripts:$PATH"
           before_install:
-            - choco install python --version 3.8.0
-            - export PATH="/c/Python38:/c/Python38/Scripts:$PATH"
-        before_install:
-          - cd python-package
+            - cd python-package              
 
-    env:
-      global:
-        - TWINE_USERNAME=__token__
-        # Note: TWINE_PASSWORD is set to a PyPI API token in Travis settings
+      env:
+        global:
+          - TWINE_USERNAME=__token__
+          # Note: TWINE_PASSWORD is set to a PyPI API token in Travis settings
 
-    install:
-      - python3 -m pip install cibuildwheel==1.3.0
+      install:
+        - python3 -m pip install cibuildwheel==1.3.0
 
-    script:
-      # build the wheels, put them into './wheelhouse'
-      - python3 -m cibuildwheel --output-dir wheelhouse
+      script:
+        # build the wheels, put them into './wheelhouse'
+        - python3 -m cibuildwheel --output-dir wheelhouse
 
-    after_success:
-    # if the release was tagged, upload them to PyPI
-    - |
-      if [[ $TRAVIS_TAG ]]; then
-      python3 -m pip install twine
-      python3 -m twine upload wheelhouse/*.whl
-      fi
+      after_success:
+        # if the release was tagged, upload them to PyPI
+        - |
+          if [[ $TRAVIS_TAG ]]; then
+          python3 -m pip install twine
+          python3 -m twine upload wheelhouse/*.whl
+          fi
 
       
-  include:
-    language: r    
-    r:
-      - release
-    sudo: false
-    warnings_are_errors: true
-    cache: packages
+    - language: r    
+      r:
+        - release
+      sudo: false
+      warnings_are_errors: true
+      cache: packages
     
-    addons:
-      apt:
-        packages:
-          - r-cran-covr
-          - r-cran-devtools
-          - r-cran-futile.logger
-          - r-cran-lava
-          - r-cran-optimx          
-          - r-cran-rcpp
-          - r-cran-rcpparmadillo
-          - r-cran-testthat
+      addons:
+        apt:
+          packages:
+            - r-cran-covr
+            - r-cran-devtools
+            - r-cran-futile.logger
+            - r-cran-lava
+            - r-cran-optimx          
+            - r-cran-rcpp
+            - r-cran-rcpparmadillo
+            - r-cran-testthat
           
-    install:
-      - echo    
-    script:
-      - make checkr pkg=targeted
-
+      install:
+        - echo    
+      script:
+        - make checkr pkg=targeted
       
-  include:
-    language: cpp
-    sudo: required    
-    os:
-      - linux
-    compiler:
-      - clang
-      - gcc
-    addons:
-      apt:
-        packages:
-          - cmake
-          - ninja
-    script:
-      - make init test
+    - language: cpp
+      sudo: required    
+      os:
+        - linux
+      compiler:
+        - clang
+        - gcc
+      addons:
+        apt:
+          packages:
+            - cmake
+            - ninja
+      script:
+        - make init test
