--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 matrix:
   include:
+    
     - language: python
+      before_install:
+        - cd python-package      
       jobs:        
         include:
           # perform a linux build
@@ -14,21 +17,15 @@ matrix:
             before_install:
               - choco install python --version 3.8.0
               - export PATH="/c/Python38:/c/Python38/Scripts:$PATH"
-          before_install:
-            - cd python-package              
-
       env:
         global:
           - TWINE_USERNAME=__token__
           # Note: TWINE_PASSWORD is set to a PyPI API token in Travis settings
-
       install:
         - python3 -m pip install cibuildwheel==1.3.0
-
       script:
         # build the wheels, put them into './wheelhouse'
         - python3 -m cibuildwheel --output-dir wheelhouse
-
       after_success:
         # if the release was tagged, upload them to PyPI
         - |
@@ -37,14 +34,10 @@ matrix:
           python3 -m twine upload wheelhouse/*.whl
           fi
 
-      
     - language: r    
-      r:
-        - release
-      sudo: false
+      r: release
       warnings_are_errors: true
-      cache: packages
-    
+      cache: packages    
       addons:
         apt:
           packages:
@@ -55,20 +48,16 @@ matrix:
             - r-cran-optimx          
             - r-cran-rcpp
             - r-cran-rcpparmadillo
-            - r-cran-testthat
-          
+            - r-cran-testthat          
       install:
         - echo    
       script:
         - make checkr pkg=targeted
-      
+
     - language: cpp
-      sudo: required    
       os:
         - linux
-      compiler:
-        - clang
-        - gcc
+      compiler: clang
       addons:
         apt:
           packages:
