--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ matrix:
               - export PATH="/c/Python38:/c/Python38/Scripts:$PATH"
       env:
         global:
+          - CIBW_BEFORE_BUILD= yum install -y liblapack-devel blas-devel
           - TWINE_USERNAME=__token__
           # Note: TWINE_PASSWORD is set to a PyPI API token in Travis settings
       install:
